<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_holder"
        android:layout_marginBottom="80dp"
        android:contentDescription="@null"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/text_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <TextView
            style="@style/H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/login_screen_title"/>

        <TextView
            style="@style/H3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_screen_description"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_in_btn"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/HintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/grey"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@color/grey"/>

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/HintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/grey"/>
    </LinearLayout>

    <Button
        android:id="@+id/sign_in_btn"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="46dp"
        android:backgroundTint="@color/button_orange"
        android:text="@string/sign_in"
        android:textAllCaps="false"/>
</RelativeLayout>